<resources>
    <string name="app_name">agoravai</string>
    <string name="centelhas_em_movimento_desc">Abrir detalhes da exposição Centelhas em Movimento</string>
    <string name="entrarbut">Entrar</string>
    <string name="dar_feedback">Dar feedback</string>
    <string name="que_tipo_de_usu_rio_voc">Que tipo de usuário você é?</string>
    <string name="funcionariobut">Funcionario</string>
    <string name="visitantebut">Visitante</string>
    <string name="conta">Conta</string>
    <string name="ir_para_obras">Ir para Obras</string>
    <string name="home">HOME</string>
    <string name="obras">OBRAS</string>
    <string name="ir_para_eventos">Ir para Eventos</string>
    <string name="exposi_o_atual_do_museu">Exposição atual do Museu</string>
    <string name="nome_do_evento">Nome do Evento</string>
    <string name="descri_o_do_evento">Descrição do Evento</string>
    <string name="upload_imagem">Upload Imagem</string>
    <string name="salvar_evento">Salvar Evento</string>
    <string name="descri_o_do_mapa">Descrição do mapa</string>
    <string name="escolher_imagem">Escolher imagem</string>
    <string name="salvar">Salvar</string>
    <string name="nome">Nome</string>
    <string name="ano">Ano</string>
    <string name="autor">Autor</string>
    <string name="upload_imagem2">Upload Imagem</string>
    <string name="salvar2">Salvar</string>
    <string name="nome_do_evento2">Nome do Evento</string>
    <string name="descri_o_do_evento2">Descrição do Evento</string>
    <string name="enviar_feedback">Enviar Feedback</string>
    <string name="conta2">Conta</string>
    <string name="funcion_rios">Funcionários</string>
    <string name="editar_obras">Editar Obras</string>
    <string name="editar_eventos">Editar Eventos</string>
    <string name="exposi_o_atual_do_museu2">Exposição atual do museu</string>
    <string name="editar_mapa">Editar Mapa</string>
    <string name="home2">HOME</string>
    <string name="obras2">OBRAS</string>
    <string name="login_funcionario">LOGIN FUNCIONARIO</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="conectar">Conectar</string>
    <string name="cancelar">Cancelar</string>
    <string name="nome2">Nome</string>
    <string name="ano2">Ano</string>
    <string name="autor2">Autor</string>
    <string name="compartilhar">Compartilhar</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="buscar_eventos">Buscar eventos</string>
    <string name="buscar_eventos2">Buscar eventos</string>
    <string name="obras3">Obras</string>
    <string name="buscar_obras">Buscar obras...</string>
    <string name="nome_do_evento3">Nome do Evento</string>
    <string name="descri_o_do_evento3">Descrição do Evento</string>
    <string name="salvar3">Salvar</string>
    <string name="descri_o_do_mapa3">Descrição do mapa</string>
    <string name="salvar4">Salvar</string>
    <string name="nome4">Nome</string>
    <string name="ano4">Ano</string>
    <string name="autor4">Autor</string>
    <string name="salvar5">Salvar</string>
    <string name="nome5">Nome</string>
    <string name="ano5">Ano</string>
    <string name="autor5">Autor</string>
    <string name="salvar6">Salvar</string>
</resources>