<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEditMapaActivity">

    <EditText
        android:id="@+id/etDescricaoMapa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descri_o_do_mapa"
        android:layout_margin="16dp"/>

    <ImageView
        android:id="@+id/imgMapa"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/etDescricaoMapa"
        android:layout_margin="16dp"
        android:background="#E0E0E0"
        android:contentDescription="Mapa"/>

    <Button
        android:id="@+id/btnChooseImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/escolher_imagem"
        android:layout_below="@id/imgMapa"
        android:layout_margin="16dp"/>

    <Button
        android:id="@+id/btnSaveMapa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        android:layout_below="@id/btnChooseImage"
        android:layout_margin="16dp"/>
</RelativeLayout>
