<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEditObraActivity">

    <EditText
        android:id="@+id/etNome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nome"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        />

    <EditText
        android:id="@+id/etAno"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/ano"
        app:layout_constraintTop_toBottomOf="@id/etNome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        />

    <EditText
        android:id="@+id/etAutor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/autor"
        app:layout_constraintTop_toBottomOf="@id/etAno"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        />

    <ImageView
        android:id="@+id/imgObra"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:contentDescription="Imagem da Obra"
        app:layout_constraintTop_toBottomOf="@id/etAutor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        />

    <Button
        android:id="@+id/btnUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_imagem2"
        app:layout_constraintTop_toBottomOf="@id/imgObra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salvar2"
        app:layout_constraintTop_toBottomOf="@id/btnUpload"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
